// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SDropDown renders dropdown list 1`] = `
<span class="s-menu" label="Choose country"><span><span class="s-input"><span class="s-input__label">Choose country</span> <input type="text" disabled="disabled" class="s-input__input"> <span class="s-drop-down__caret s-drop-down__caret--open"><i class="fas fa-caret-down"></i></span></span></span>
<div class="s-menu__popup" style="top: 0px; min-width: 0px; height: 0px; left: 0px;">
  <div class="s-menu__popup__content" style="opacity: 0;">
    <div>
      <ul class="s-list">
        <li class="s-list__item">
          <!---->
          Norge
        </li>
        <li class="s-list__item">
          <!---->
          Sverige
        </li>
        <li class="s-list__item">
          <!---->
          England
        </li>
      </ul>
    </div>
  </div>
</div></span>
`;

exports[`SDropDown renders filtered list 1`] = `
<span class="s-menu" label="Choose country"><span><span class="s-input s-input--focus"><span class="s-input__label s-input__label--aside">Choose country</span> <input type="text" class="s-input__input"> <span class="s-drop-down__caret s-drop-down__caret--open"><i class="fas fa-caret-down"></i></span></span></span>
<div class="s-menu__popup" style="top: 0px; min-width: 0px; height: 0px; left: 0px;">
  <div class="s-menu__popup__content" style="opacity: 1;">
    <div>
      <ul class="s-list">
        <li class="s-list__item">
          <!---->
          Sverige
        </li>
      </ul>
    </div>
  </div>
</div></span>
`;
